--- a/demo/vaadin-router-route-actions-demos.html
+++ b/demo/vaadin-router-route-actions-demos.html
@@ -38,7 +38,10 @@
         <li><code>context.redirect(path)</code> [function] that creates a redirect data for the path specified.
         This data can be returned from <code>action</code> to perform an actual redirect</li>
         <li><code>context.component(component)</code> [function] that creates a new <code>HTMLElement</code>
-          with current context</li>
+          with current context. If an action returns this element, the behavior is the same as for <code>component</code> route property:
+          the action result will be rendered, if the action is in a child route,
+          the result will be rendered as light dom child of the component from a parent route.
+        </li>
       </ul>
       The supported return values are
       <ul>
