--- a/demo/demo-shell.html
+++ b/demo/demo-shell.html
@@ -5,6 +5,7 @@
 <link rel="import" href="../../vaadin-demo-helpers/vaadin-demo-iframe-renderer-outlet.html">
 
 <link rel="import" href="element-demo.html">
+<link rel="import" href="vaadin-router-demo-shared-styles.html">
 
 <script src="../dist/vaadin-router.umd.js"></script>
 
